<resources>
    <string name="app_name">FitHelperApp</string>
    <string name="updateInfo">Происходит обновление данных приложения</string>


    <string name="search_your_recipes">Поиск рецептов</string>
    <string name="meal_categories">Еда по категориям</string>

    <string name="favorites">Избранное</string>
    <string name="recipes">Рецепты</string>
    <string name="cookwith">Приготовить из</string>
    <string name="helper">Fit-рекомендации</string>
    <string name="mealplanner">Планировать приёмы пищи</string>
    <string name="shoppingcart">Список покупок</string>
    <string name="settings">Настройки</string>


    <string name="portion">В одной порции</string>
    <string name="cooktime">Время приготовления</string>
    <string name="proteins">Белки гр.</string>
    <string name="fats">Жиры гр.</string>
    <string name="carbs">Углеводы гр.</string>
    <string name="calories">Калории</string>
    <string name="category">Категория</string>
    <string name="country">Страна</string>
    <string name="instructions">Инструкции</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">Ингридиенты</string>



</resources>